--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Setup Git Configuration
         run: |
-          git config user.email "ryandakaminari@gmail.com"
-          git config user.name "Ryanda1106"
+          git config user.email "akashixoreki@gmail.com"
+          git config user.name "akashixoreki"
 
       - name: Prepare Commit
         run: |
